cmake_minimum_required(VERSION 3.2)

set(MY_BUILD_PATH bin)
if(NOT DEFINED ENV{TRAVIS_BUILD_NUMBER})
    set(ENV{TRAVIS_BUILD_NUMBER} 1)
    set(MY_BUILD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)
endif()

project(OTUS_CPP VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})

message(">> Build: ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}.$ENV{TRAVIS_BUILD_NUMBER}")

enable_testing()

add_subdirectory(version)
add_subdirectory(ip_filter)

set(CPACK_GENERATOR DEB)
set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT ilia64mods@gmail.com)
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)

include(CPack)

install(TARGETS version ip_filter RUNTIME DESTINATION ${MY_BUILD_PATH})
